# sql_error_categorizer

./: Makefile  README.md  pyproject.toml  requirements.txt  test_detector.py
datasets/catalogs/: constraints.json  miedema.json
docs/: conf.py  index.rst
src/sql_error_categorizer/: __init__.py  sql_errors.py  tokenizer.py  util.py
src/sql_error_categorizer/catalog/: __init__.py  catalog.py  column.py  constraint.py  queries.py  schema.py  table.py  types.py
src/sql_error_categorizer/detector/: __init__.py
src/sql_error_categorizer/detectors/: __init__.py  base.py  complications.py  logical.py  semantic.py  syntax.py
src/sql_error_categorizer/parser/: __init__.py  ctes.py  query.py  subqueries.py  util.py
src/sql_error_categorizer/query/: __init__.py  extractors.py  query.py  set_operations.py  smt.py  tokenized_sql.py  typechecking.py  util.py
tests/: __init__.py  test_query.py  test_syn_2.py  test_syn_2_undefined_ambiguous_column.py  test_syn_2_undefined_functions.py  test_syn_2_undefined_tables.py  test_syn_4_nested_aggregate_functions.py  test_syn_5_extraneous_omitted_grouping_column.py  test_syn_5_strange_having.py  test_syn_6.py  test_syn_6_additional_omitted_semicolons.py  test_syn_6_duplicate_clause.py  test_syn_6_keywords_order.py  test_syn_6_missing_from.py  test_syn_6_using_where_twice.py  test_tokenizer.py
tests/1_syn/: test_002_ambiguous_column.py  test_020_missing_from.py
tests/3_log/: test_070_extraneous_column_in_select.py  test_071_missing_column_from_select.py  test_073_missing_as_from_select.py
tests/4_com/: test_095_group_by_with_singleton_groups.py
tests/datasets/: cat_constraints.json  cat_miedema.json  cat_multischema.json  cat_uc.json
tests/query/: conftest.py  test_extractors.py  test_query.py  test_typechecking.py
(+58 files in other folders)
